enhance: change welcome message on root (/) endpoint, change some default val on app config sample JSON

--- a/backend/src/main/resources/application-config.json.sample
+++ b/backend/src/main/resources/application-config.json.sample
@@ -6,7 +6,7 @@
   "COMPANY_FACEBOOK_LINK": "https://web.facebook.com/starterapp",
   "COMPANY_INSTAGRAM_LINK": "https://instagram.com/starterapp",
   "HTTP_PORT": 7000,
-  "DB_URL": "jdbc:postgresql://127.0.0.1:5432/boilerplate_v1",
+  "DB_URL": "jdbc:postgresql://127.0.0.1:5432/starter_v1",
   "DB_USER": "dml_user",
   "DB_PASSWORD": "dml_user_password",
   "DB_DRIVER_CLASSNAME": "org.postgresql.Driver",
@@ -15,7 +15,7 @@
   "CURRENT_DB_MIGRATION_DROPS_FOR": "",
   "FLYWAY_DB_USER": "ddl_user",
   "FLYWAY_DB_PASSWORD": "ddl_user_password",
-  "ENABLE_DATA_INITIALIZER": false,
+  "ENABLE_DATA_INITIALIZER": true,
   "MAX_LOGIN_ATTEMPT": 5,
   "AUTO_UNLOCKED_ACCOUNT_AFTER": 1,
   "CORS_ALLOWED_ORIGIN_PATTERN": ".*",
@@ -42,7 +42,7 @@
   "MAILER_SENDER": "Starter App",
   "MAILER_USERNAME": "api",
   "MAILER_PASSWORD": "mailer_password",
-  "MAILER_URL": "https://api.mailgun.net/v3/picassorewards.com/messages",
+  "MAILER_URL": "https://api.mailgun.net/v3/starter.com/messages",
   "DISABLE_TWILIO_API": true,
   "TWILIO_ACCOUNT_SID": "twilio_account_sid",
   "TWILIO_AUTH_TOKEN": "twilio_auth_token",
@@ -50,13 +50,13 @@
   "TWILIO_EDGE": "singapore",
   "TWILIO_SENDER_NAME": "Starter App",
   "TWILIO_SENDER_PHONE_NUMBER": "twilio_sender_number",
-  "DISABLE_AWS_S3": trus,
+  "DISABLE_AWS_S3": false,
   "AWS_S3_BASE_URL": "aws_s3_base_url",
   "AWS_S3_ALIAS_URL": "aws_s3_alias_url",
   "AWS_S3_ACCESS_KEY": "aws_s3_access_key",
   "AWS_S3_SECRET_KEY": "aws_s3_secret_key",
-  "AWS_S3_REGION_NAME": "syd1",
-  "AWS_S3_BUCKET_NAME": "jogjanode",
+  "AWS_S3_REGION_NAME": "aws_s3_region_name",
+  "AWS_S3_BUCKET_NAME": "aws_s3_bucket_name",
   "AWS_S3_AVATAR_FOLDER": "avatar",
   "AWS_S3_BANNERS_FOLDER": "b",
   "AWS_S3_LOGO_FOLDER": "logo",
